new URL(urlString) を new URI(urlString).toURL() に置き換え